RESOLVED FIXED105947
DFG should not use the InlineCallFrame's callee when it could have used the executable istead
https://bugs.webkit.org/show_bug.cgi?id=105947
Summary DFG should not use the InlineCallFrame's callee when it could have used the e...
Filip Pizlo
Reported 2013-01-02 14:19:03 PST
Patch forthcoming.
Attachments
the patch (1.60 KB, patch)
2013-01-02 14:22 PST, Filip Pizlo
mhahnenberg: review+
Filip Pizlo
Comment 1 2013-01-02 14:22:40 PST
Created attachment 181065 [details] the patch
Mark Hahnenberg
Comment 2 2013-01-02 14:24:06 PST
Comment on attachment 181065 [details] the patch r=me
Filip Pizlo
Comment 3 2013-01-02 14:42:29 PST
Note You need to log in before you can comment on or make changes to this bug.