DFG should not use the InlineCallFrame's callee when it could have used the executable istead https://bugs.webkit.org/show_bug.cgi?id=105947

Reviewed by Mark Hahnenberg.

We shouldn't use the callee to get the executable when we have the executable already. Not only
does this make the logic more clear, but it also allows for a world where the executable is known
but the callee isn't.

* dfg/DFGAssemblyHelpers.h:
(JSC::DFG::AssemblyHelpers::strictModeFor):



Canonical link: https://commits.webkit.org/124133@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@138651 268f45cc-cd09-0410-ab3c-d52691b4dbfc